# mecanum_controller

./: .gitignore  CMakeLists.txt  README.md  mecanum_controller_plugin.xml  package.xml
config/: mecanum_controller.yaml
launch/: mecanum.launch.py
scripts/: mecanum_kinematics_node.py
src/: mecanum_controller.cpp
urdf/: yahboomcar_mecanum.xacro
