<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yahboomcar_mecanum_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yyy@todo.todo">yyy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <controller_interface plugin="${prefix}/mecanum_controller_plugin.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
